<layout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
tools:context="com.klimaatmobiel.ui.fragments.ShoppingCartFragment">

<data>
    <variable
        name="webshopViewModel"
        type="com.klimaatmobiel.ui.viewModels.WebshopViewModel" />
</data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/shopping_cart_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/cart_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textAlignment="center"
            android:textSize="@dimen/text_size_regular"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/order_status_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:projectBudgetBinding="@{webshopViewModel.group.project.projectBudget}"
            tools:text="Winkelmandje -  budget: 100 munten" />

        <TextView
            android:id="@+id/order_status_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:textSize="@dimen/text_size_regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:orderStatusBinding="@{webshopViewModel.group.order.submitted}"
            tools:text="Status" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/order_preview_list"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@+id/order_cost"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cart_text"
            app:listDataOrderPreview="@{webshopViewModel.group.order.orderItems}"
            tools:itemCount="3"
            tools:listitem="@layout/order_preview_list_item" />

        <LinearLayout
            android:id="@+id/klimaatscore_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/complete_order_button"
            app:layout_constraintStart_toStartOf="parent"
            app:orderTotalScoreBinding="@{webshopViewModel.totaleKlimaatScore}" />

        <TextView
            android:id="@+id/order_cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="64dp"
            android:padding="8dp"
            android:textAlignment="center"
            android:textSize="@dimen/titels"
            app:groupSpentBinding="@{webshopViewModel.group.order.totalOrderPrice}"
            app:layout_constraintBottom_toTopOf="@+id/btn_empty_shopping_cart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/klimaatscore_layout"
            app:layout_constraintWidth_percent="0.5"
            tools:text="Totaal: €123" />

        <Button
            style="@style/red_button_style"
            android:id="@+id/complete_order_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            android:text="@string/complete_order"
            android:onClick="@{() -> webshopViewModel.confirmOrder()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_empty_shopping_cart" />

        <Button
            style="@style/white_button_style"
            android:id="@+id/btn_empty_shopping_cart"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            android:padding="5dp"
            android:text="@string/leeg_karretje"
            android:onClick="@{() -> webshopViewModel.onClickDeleteAll()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/complete_order_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>
