...
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/edit_text_hint"
            android:inputType="textPersonName"
            android:text="@={mainMenuViewModel.groupCode}"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/webshop_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/klimaatmobiel_image"
            app:layout_constraintVertical_bias="0.96" />

        <Button
...
