...
        <variable
            name="webshopViewModel"
            type="com.klimaatmobiel.ui.viewModels.WebshopViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/webshop_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <EditText
            android:id="@+id/filter_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/filter_hint"
...
