...
        <variable
            name="addGroupViewModel"
            type="com.klimaatmobiel.ui.viewModels.AddGroupViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/add_group_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true">

        <TextView
            android:id="@+id/text_hallo"
...
            android:layout_height="wrap_content"
            android:layout_marginBottom="64dp"
            android:ems="10"
            android:hint="Voornaam"
            android:inputType="textPersonName"
            android:textSize="32sp"
            app:layout_constraintBottom_toTopOf="@+id/button_group_added"
            app:layout_constraintEnd_toStartOf="@+id/edit_text_add_pupil_name"
            app:layout_constraintStart_toStartOf="@+id/recycler_groupmembers" />

        <Button
            android:id="@+id/button_add_pupil"
            android:layout_width="wrap_content"
...
